--- a/_sources/ch04/note03.ipynb
+++ b/_sources/ch04/note03.ipynb
@@ -21,21 +21,18 @@
     "\n",
     "$${H =  \\frac{1}{2\\mu}p_x^2 + \\frac{1}{2}kx^2}$$\n",
     "\n",
-    "\n",
     "- The [quantum mechanicalm harmonic oscillator](http://en.wikipedia.org/wiki/Quantum_harmonic_oscillator) is obtained by replacing the classical position and momentum by the corresponding quantum mechanical operators\n",
     "\n",
     "$${\\hat{H} = -\\frac{\\hbar^2}{2\\mu}\\frac{d^2}{dx^2} + \\frac{1}{2}kx^2 }$$\n",
     "\n",
-    "- Now the probelm is to solve for eignefunctiona and eigenvalues. Find what values a new quantum number $v$ takes on. Investigate features of eigenfunctions\n",
+    "- Now the probelm is to solve for eignefunctions and eigenvalues. \n",
     "\n",
     "$$\\hat{H}\\psi_v(x) = E_v \\psi_v(x) $$\n",
     "\n",
-    "- Note that the potential term may be expressed in terms of three parameters becasue of $k=\\frac{\\mu}{\\omega}$ and $\\omega=2\\pi \\nu$ relations\n",
-    "\n",
-    "| $k$      | Force constant (kg $s^{-2}$)                                |\n",
-    "|----------|-------------------------------------------------------------|\n",
-    "| $\\omega$ | Angular frequency ($\\omega = 2\\pi\\nu$; Hz)                  |\n",
-    "| $\\nu$    | Frequency (Hz; do not confuse this with quantum number $v$) |"
+    "**Parameters of the Hamiltonian**\n",
+    "- $k=\\frac{\\mu}{\\omega}$ Spring constant \n",
+    "- Angular frequency of vibrations $\\omega=2\\pi \\nu$ \n",
+    "- $\\nu$,  Frequency (Hz; do not confuse this with quantum number $v$) "
    ]
   },
   {
@@ -56,7 +53,7 @@
     "\n",
     "- **Scaling factor**, $\\alpha = \\sqrt{\\frac{k\\mu}{\\hbar^2}}$\n",
     "- **Normalization factor**,  ${N_v = \\frac{1}{\\sqrt{2^vv!}}\\left(\\frac{\\alpha}{\\pi}\\right)^{1/4}}$\n",
-    "- **[Hermite polynomials](http://en.wikipedia.org/wiki/Hermite_polynomials)**, $H_v$'s \n",
+    "- **[Hermite polynomials](http://en.wikipedia.org/wiki/Hermite_polynomials)**, $H_v$ \n",
     ":::\n",
     "\n",
     "- For example, the wavefunctions for the two lowest states are:\n",
@@ -66,7 +63,7 @@
     "$${\\psi_1(x) = \\left(\\frac{4\\alpha^3}{\\pi}\\right)^{1/4} x e^{-\\alpha x^2/2}}$$\n",
     "\n",
     "\n",
-    "### Hermite polynomials show nodal features\n",
+    "### Hermite polynomials show nodal and symmetry features of wavefunctions\n",
     "\n",
     "| n  | Hermite Polynomial $( H_n(x))$ |\n",
     "|----|---------------------------------|\n",
@@ -77,7 +74,7 @@
     "| 4  | $16x^4 - 48x^2 + 12$              |\n",
     "\n",
     "\n",
-    "- Hermite polynomials obey the following relations which are useful when evaluating integrals\n",
+    "- Hermite polynomials obey the following relations which are useful when evaluating integrals. Check that table above obeys these relations\n",
     "\n",
     "$${H_v''(y) - 2yH_v'(y) + 2vH_v(y) = 0\\textnormal{ (characteristic equation)}}$$\n",
     "\n",
@@ -97,6 +94,7 @@
     "### Odd/even symmetry of wavefunctions\n",
     "\n",
     "- Solutions $\\psi_v$ with $v = 0, 2, 4, ...$ are even: $\\psi_v(x) = \\psi_v(-x)$.\n",
+    "\n",
     "- Solutions $\\psi_v$ with $v = 1, 3, 5, ...$ are odd: $\\psi_v(x) = -\\psi_v(-x)$.\n",
     "\n",
     "**Conseqeuences for evaluating integrals**\n",
@@ -168,7 +166,7 @@
     "    ax.fill_between(q, f * scaling + yoffset, yoffset, f < 0, color=COLOUR2, alpha=0.5)\n",
     "\n",
     "# Create subplots\n",
-    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(14, 8))\n",
     "\n",
     "# Generate q range and potential\n",
     "qmin, qmax = get_turning_points(VMAX)\n",
@@ -270,7 +268,7 @@
     "\n",
     "# Create plot\n",
     "def plot_wavefunctions_square(v_values, colors):\n",
-    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    fig, ax = plt.subplots(figsize=(14, 8))\n",
     "    \n",
     "    # Generate Hermite polynomials up to the maximum v in v_values\n",
     "    v_max = max(v_values)\n",
