--- a/_sources/ch04/note03B.ipynb
+++ b/_sources/ch04/note03B.ipynb
@@ -24,7 +24,7 @@
     "- First let us write harmonic oscillator energies in a format used for spectroscopic analysis. This means converting to wavenumber units $\\tilde{\\nu}=\\frac{1}{\\lambda}$:\n",
     "\n",
     ":::{admonition} **Harmonic oscillator and spectroscopuc units**\n",
-    ":class: imporant\n",
+    ":class: important\n",
     "\n",
     "$${\\tilde{E}_v = \\frac{E_v}{hc} = \\tilde{\\nu}\\left(v + \\frac{1}{2}\\right)}$$\n",
     "\n",
@@ -339,6 +339,7 @@
     "We can account for the deviation from the harmonic behavior by adding higher order polynomial terms $\\tilde{E}_v$. Addition of new terms allow for eventual dissociation to happen when molecule is excited to high vibrational energy states. \n",
     "\n",
     ":::{admonition} **Unharmonic oscillator**\n",
+    ":class: important \n",
     "\n",
     "$${\\tilde{E}_v = \\tilde{\\nu}_e(v + \\frac{1}{2}) - \\tilde{\\nu}_ex_e(v + \\frac{1}{2})^2 + ...}$$\n",
     "\n",
@@ -452,6 +453,7 @@
     "### Calculating number of modes\n",
     "\n",
     "- The degrees of vibrational modes for linear molecules can be calculated using the formula:\n",
+    "\n",
     ":::{admonition}\n",
     ":class: important\n",
     "\n",
