--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -87,7 +87,7 @@
     "Spherical coordinate system is defined by radial coordinate $r$, azimuthal angle  $\\phi$ and polar angle $\\theta$. \n",
     ":::\n",
     "\n",
-    ":::{admonition} **Geometric relations**\n",
+    ":::{admonition} **Cartesian to spherical conversion**\n",
     ":class: important\n",
     "\n",
     "$$x={\\color{blue} r}{\\color{green}sin\\theta} {\\color{orange} cos\\phi}$$\n",
@@ -105,7 +105,7 @@
     ":class: important\n",
     "\n",
     "$$\n",
-    "dV = {\\color{blue} r^2} {\\color{green}\\sin \\theta} \\, {\\color{blue} dr} \\, {\\color{green}d\\theta} \\, {\\color{orange}d\\phi}\n",
+    "dV = {\\color{blue} r^2} {\\color{blue} dr} \\cdot {\\color{green}\\sin \\theta} {\\color{green}d\\theta} \\cdot {\\color{orange}d\\phi}\n",
     "$$\n",
     "\n",
     ":::\n",
@@ -282,6 +282,16 @@
    "source": [
     "### Spherical harmonics \n",
     "\n",
+    "| $ Y_{lm}(\\theta, \\phi) $ | Expression | Colatitudinal Nodes | Azimuthal Nodes |\n",
+    "|----------------------------|------------|----------------------|------------------|\n",
+    "| $ Y_{00} $               | $ \\frac{1}{\\sqrt{4\\pi}} $ | 0 | 0 |\n",
+    "| $ Y_{10} $               | $ \\sqrt{\\frac{3}{4\\pi}} \\cos(\\theta) $ | 1 (equatorial) | 0 |\n",
+    "| $ Y_{1-1} $              | $ \\sqrt{\\frac{3}{4\\pi}} \\sin(\\theta) e^{-i\\phi} $ | 0 | 1 |\n",
+    "| $ Y_{20} $               | $ \\sqrt{\\frac{5}{16\\pi}} (3\\cos^2(\\theta) - 1) $ | 2 (colatitudinal rings) | 0 |\n",
+    "| $ Y_{2-1} $              | $ \\sqrt{\\frac{15}{4\\pi}} \\sin(\\theta) \\cos(\\theta) e^{-i\\phi} $ | 1 (equatorial) | 1 |\n",
+    "| $ Y_{2-2} $              | $ \\sqrt{\\frac{15}{4\\pi}} \\sin^2(\\theta) e^{-2i\\phi} $ | 0 | 2 |\n",
+    "\n",
+    "\n",
     "- Spherical harmonics are important in many theoretical and practical applications, e.g., the representation of multipole electrostatic and electromagnetic fields, computation of [atomic orbital](https://en.wikipedia.org/wiki/Atomic_orbital) [electron configurations](https://en.wikipedia.org/wiki/Electron_configuration), representation of gravitational fields,  MRI imaging for streamline tractography, and the magnetic fields of planetary bodies and stars.\n",
     "\n",
     "- The nodes of spherical harmonics, $Y_{lm}(\\theta, \\phi)$, are determined by the angular part of the solutions to the Laplace equation in spherical coordinates. The nodal structure is influenced by both the degree $ l $ and the order $m$, defining the number and type of nodes as follows:\n",
@@ -296,24 +306,7 @@
     "\n",
     "3. **Total Nodes:** equal to sum of nodes coming from polar and longitudinal nodes and are exactly equal to $l$. E. gl=0 no nodes, l=4 four nodes. \n",
     "\n",
-    "### Summary of Nodes for Each $ Y_{lm} $\n",
     "\n",
-    "| $ Y_{lm}(\\theta, \\phi) $ | Expression | Colatitudinal Nodes | Azimuthal Nodes |\n",
-    "|----------------------------|------------|----------------------|------------------|\n",
-    "| $ Y_{00} $               | $ \\frac{1}{\\sqrt{4\\pi}} $ | 0 | 0 |\n",
-    "| $ Y_{10} $               | $ \\sqrt{\\frac{3}{4\\pi}} \\cos(\\theta) $ | 1 (equatorial) | 0 |\n",
-    "| $ Y_{1-1} $              | $ \\sqrt{\\frac{3}{4\\pi}} \\sin(\\theta) e^{-i\\phi} $ | 0 | 1 |\n",
-    "| $ Y_{20} $               | $ \\sqrt{\\frac{5}{16\\pi}} (3\\cos^2(\\theta) - 1) $ | 2 (colatitudinal rings) | 0 |\n",
-    "| $ Y_{2-1} $              | $ \\sqrt{\\frac{15}{4\\pi}} \\sin(\\theta) \\cos(\\theta) e^{-i\\phi} $ | 1 (equatorial) | 1 |\n",
-    "| $ Y_{2-2} $              | $ \\sqrt{\\frac{15}{4\\pi}} \\sin^2(\\theta) e^{-2i\\phi} $ | 0 | 2 |\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Orthogonality**\n",
     "\n",
     "The orthogonality of spherical harmonics is expressed as:\n",
@@ -326,11 +319,7 @@
     "\n",
     "$$\n",
     "\\int_0^{\\pi} \\int_0^{2\\pi} Y_{l'}^{m'*}(\\theta, \\phi) Y_l^m(\\theta, \\phi) \\sin(\\theta) \\, d\\theta \\, d\\phi = \\delta_{l,l'}\\delta_{m,m'}\n",
-    "$$\n",
-    "\n",
-    "- **Mathematical Structure**: The spherical harmonics incorporate alternating odd and even functions of associated Legendre polynomials, much like Hermite polynomials in the quantum harmonic oscillator.\n",
-    "- **Visual Representation**: Spherical harmonics exhibit distinct nodal patterns that increase with higher quantum numbers. This behavior mirrors the nodal structure seen in other quantum systems, such as the particle in a box and the harmonic oscillator.\n",
-    "- **Symmetry and Orthogonality**: By symmetry, the product of two different spherical harmonics integrated over the sphere equals zero, a property that directly reflects their orthogonality."
+    "$$"
    ]
   },
   {
@@ -576,7 +565,7 @@
     "\n",
     "# Update layout to arrange scenes in a row and add titles as annotations\n",
     "fig.update_layout(\n",
-    "    title=\"First Three Spherical Harmonics\",\n",
+    "    title=\"Three Spherical Harmonics: l=1, m=-1, 0, 1\",\n",
     "    scene=dict(domain=dict(x=[0, 0.33]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
     "    scene2=dict(domain=dict(x=[0.33, 0.66]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
     "    scene3=dict(domain=dict(x=[0.66, 1]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
@@ -601,6 +590,8 @@
    },
    "outputs": [],
    "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
     "# Generate data for Y(11,1)\n",
     "l, m = 7, 1\n",
     "x, y, z, fcolors_normalized = generate_spherical_harmonic_data(l, m)\n",
